sourcery-macros/tests/ui/fail/projection_missing_id.stderr
error: Missing field `id`
  --> tests/ui/fail/projection_missing_id.rs:10:10
   |
10 | #[derive(Projection)]
   |          ^^^^^^^^^^
   |
   = note: this error originates in the derive macro `Projection` (in Nightly builds, run with -Z macro-backtrace for more info)
